# 2023-focus-filtering

./: .flake8  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/figures/: roc_curve_summary.csv
analysis/user_assessments/: focus_results_137659.csv  focus_results_242046.csv  focus_results_407790.csv  focus_results_850365.csv
code/fiji_macro/: user_assessment.ijm
code/python/: analyze_metrics.py  calculate_metrics.py  measures_and_images.py
envs/: focus-filtering.yml  focus.yml
