[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-filtering"
description = "Predicting in-focus frames in label-free timelapse microscopy images"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Galo Garcia", email = "galo.garcia@gmail.com" },
  { name = "Keith Cheveralls", email = "keith.cheveralls@arcadiascience.com" },
]

dependencies = [
  "numpy~=1.26",
  "pandas~=2.1",
  "matplotlib~=3.8",
  "opencv-python~=4.8.1",
  "scikit-image~=0.22",
  "scikit-learn~=1.3",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black~=22.3",
  "flake8~=5.0",
  "isort~=5.10",
  "pre-commit~=2.19",
  "pylint~=2.14",
  "pytest~=7.1",
]

[tool.black]
src = ["focus_filtering"]
line-length = 95
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | notebooks
    | ignore
    | _version.py
  )
)
'''

[tool.isort]
profile = "black"
line_length = 95
lines_between_types = 1
default_section = "THIRDPARTY"
no_lines_before = ["STDLIB", "THIRDPARTY"]
ensure_newline_before_comments = true
