[project]
name = "focus-filtering"
description = "Predicting in-focus frames in label-free timelapse microscopy images"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11.5"
license = { file = "LICENSE" }
authors = [
  { name = "Galo Garcia", email = "galo.garcia@gmail.com" },
  { name = "Keith Cheveralls", email = "keith.cheveralls@arcadiascience.com" },
]

dynamic = []

dependencies = []

[tool.black]
line-length = 95
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | notebooks
    | ignore
    | _version.py
  )
)
'''

[tool.isort]
profile = "black"
line_length = 95
lines_between_types = 1
default_section = "THIRDPARTY"
no_lines_before = ["STDLIB", "THIRDPARTY"]
ensure_newline_before_comments = true
